--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,13 @@
 
 /* Your CSS Code here. */
+main{
+    width: 150px;
+    background-color: Black;
+}
+
+p{
+  color:white;
+  margin-left: 32px;
+  padding: 10px;
+ 
+}
