--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,9 @@
 
 /* Your CSS Code here. */
+*{margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+
 main{
     width: 150px;
     height: 150px;
