--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 
 /* Your CSS Code here. */
-/* *{margin: 0;
+*{
+    margin: 0;
     padding: 0;
     box-sizing: border-box;
 
@@ -16,4 +17,4 @@ p{
   padding: 10px;
  
 }
- */
+ 
