--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,7 @@
 
 /* Your CSS Code here. */
-main{
+.main{
 	width: 150px;
-	height: 150px:
+	height: 150px
 	background-color: black;
-}
-.hello-accio-job{
-	color: white;
-	margin-left: 32px;
-	padding: 10px;
 }
